fixed: infotab contrib picklist problem (no overflow) + refactor

--- a/pmboard-gui-bp3/src/components/tabs/info-tab/info-tab.module.css
+++ b/pmboard-gui-bp3/src/components/tabs/info-tab/info-tab.module.css
@@ -57,3 +57,8 @@
 .prj_margin {
     margin-bottom: 1em;
 }
+
+.multiselect {
+    height: 200px;
+    overflow-y: auto;
+}
